feat: implement JSON schema validation for SurveyRequest and enhance SurveyController error handling